--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.359.0",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
